tests/snapshots/generate_json__package_bin__fail__virtual_workspace_multi_package.snap
---
source: tests/generate_json.rs
expression: output

---
STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_bin_target
- package_lib_target
- package_multi_target


STDOUT:

