tests/snapshots/generate_json__package_bin__fail__workspace_single_package_lib_target.snap
---
source: tests/generate_json.rs
expression: output

---
STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_lib_target


STDOUT:

